support-files/traefik-setup/traefik-with-https-manual-method/03-traefik-service-https.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-service

spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      name: web
      port: 80
    - protocol: TCP
      name: websecure
      port: 443
    - protocol: TCP
      name: dashboard
      port: 8080

  selector:
    app: traefik
