support-files/traefik-setup/traefik-with-https-manual-method/05-example-app-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-http
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  # - match: Host(`whoami.gcp.aclab.me`) && PathPrefix(`/notls`)
  - match: Host(`whoami.gcp.aclab.me`)
    kind: Rule
    services:
    - name: whoami
      port: 80

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-https
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
  # - match: Host(`whoami.gcp.aclab.me`) && PathPrefix(`/tls`)
  - match: Host(`whoami.gcp.aclab.me`)
    kind: Rule
    services:
    - name: whoami
      port: 80
  tls:
    certResolver: letsencrypt
